--- a/.github/workflows/fetchdog-docker.yml
+++ b/.github/workflows/fetchdog-docker.yml
@@ -17,9 +17,9 @@ jobs:
       uses: actions/checkout@v2
       
     - name: Log in to Docker Hub
-      run: echo "${{ secrets.DOCKERPW }}" | docker login -u "toonmares" --password-stdin
+      run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "toonmares" --password-stdin
       
     - name: Build and push Docker image
       run: |
-        docker build -t toonmares/fetchdog-docker:latest .
-        docker push toonmares/fetchdog-docker:latest
+        docker build -t toonmares/fetchdog:latest .
+        docker push toonmares/fetchdog:latest
